cors updates